--- a/SVM_over_NN.ipynb
+++ b/SVM_over_NN.ipynb
@@ -11,10 +11,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* Data-hungry: To train NNs, you need massive amounts of data. Here is a standard set of benchmark datasets: https://archive.ics.uci.edu/ml/datasets.html : Data Sets. Pick any dataset from this set with fewer than 1000 training examples, and try training a NN that beats SVM on that data by a large margin.\n",
+    "\n",
+    "* SVM tries to increase the margin between different features but NN tries to decrease the error.Hence NN can overfit the data.\n",
+    "    Moreover SVM has inherently a linear decision boundary. To learn more complex decision boundaries, kernels can be used. ANNs naturally learn non-linear decision boundaries and thus are also more prone to overfitting.\n",
+    "\n",
+    "### SVM\n",
+    "![title](svm.jpeg)\n",
+    "\n",
+    "### NN\n",
+    "![title](NN.png)\n",
     "\n",
     "\n",
-    "* SVM tries to increase the margin between different features but NN tries to decrease the error.Hence NN can overfit the data.Moreover SVM has inherently a linear decision boundary. To learn more complex decision boundaries, kernels can be used. ANNs naturally learn non-linear decision boundaries and thus are also more prone to overfitting.\n",
+    "* Data-hungry: To train NNs, you need massive amounts of data.\n",
+    "    Here is a standard set of benchmark datasets: https://archive.ics.uci.edu/ml/datasets.html : Data Sets. Pick any dataset from this set with fewer than 1000 training examples, and try training a NN that beats SVM on that data by a large margin.\n",
     "\n",
     "\n",
     "* SGD (Gradient Descent) is typically used for learning the parameters of ANNs (this might get stuck in local minima), SMO (Sequential Minimal Optimization) is used to learn parameters of a SVM (reaches global minima).\n",
@@ -40,7 +49,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "link : http://cs229.stanford.edu/materials/CS229-DeepLearning.pdf"
+    "link : http://cs229.stanford.edu/materials/CS229-DeepLearning.pdf\n",
+    "![title](svm_vs_NN.jpeg)"
    ]
   },
   {
@@ -58,15 +68,6 @@
     "### At last Quote of the day \n",
     "## “Don’t throw away the needle when you get a sword!”"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
